--- a/styles.scss
+++ b/styles.scss
@@ -1,1 +1,173 @@
-//Här är all global css kod
+@import 'variables.scss';
+
+/* CSS RESET */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+ul {
+    list-style-type: circle;
+}
+
+/* MY RESET */
+i, em {
+	font-style: italic;
+}
+
+b, strong {
+	font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+input,
+textarea,
+select {
+  all: unset;
+}
+
+button {
+	color: inherit;
+	background-color: inherit; 
+	display: inline-block;
+  border: none;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  font-family: inherit;
+  font-size: inherit;
+  cursor: pointer;
+} 
+
+button:focus {
+  outline: none;
+  outline-offset: 0;
+}
+/* END CSS RESET */
+
+
+/* START CODE */
+html {
+  font-size: 62.5%;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: $bodyFont;
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 1.3;
+  background-color: #F2F2F2;
+  color: $black;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $menuFont;
+  font-size: 2.4rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+h1 {
+  margin: 1rem 0 1.5rem 0;
+  font-family: $headerFont;
+  font-size: 3.4rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  margin-bottom: 1rem;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #191919;
+}
+
+p {
+  margin: 1rem 0;
+}
+
+a {
+  color: $color2;
+}
+
+img {
+  height: 100%;
+}
+
+footer {
+  background-color: $color1;
+}
+
+select,
+input,
+::placeholder {
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: #a6a6a6;
+}
+
+//Remove arrows on type number
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.clearFloat {
+  clear: both;
+}
