added some game logic and fixes for images

--- a/pages/add-dog/add-dog.module.scss
+++ b/pages/add-dog/add-dog.module.scss
@@ -2,6 +2,10 @@
   margin: 2rem 3rem;
 
   button {
-    margin-bottom: 4rem
+    margin-bottom: 4rem;
+
+    &:hover {
+      text-decoration: underline;
   }
+ }
 }
