--- a/variables.scss
+++ b/variables.scss
@@ -8,6 +8,7 @@
 
 $color1: #54B4D3;     //main color
 $color2: #6B89C9;     //links
+$color3: #FFF6EB;
 $black: #191919;
 $white: #FFF;
 $hover: #007F9C;
