--- a/components/DogForm/DogForm.module.scss
+++ b/components/DogForm/DogForm.module.scss
@@ -1,3 +1,5 @@
+@import 'variables.scss';
+
 .dogForm {
   max-width: 30rem;
   padding: 2rem;
@@ -9,4 +11,37 @@
     display: block;
     margin: 0.5rem 0 3rem 0;
   }
+
+  button {
+    background-color: $color1;
+    padding: 0.5rem 1rem;
+    margin-top: 2rem;
+    border-radius: 0.50rem;
+
+    &:hover {
+      background-color: $hover;
+  }
+ }
+}
+
+.notification {
+  background-color: $color3;
+  border: 1px solid #c3e6cb;
+  padding: 1rem;
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  align-items: center;
+
+  button {
+    background-color: $color1;
+    padding: 0.5rem 1rem;
+    margin-top: 2rem;
+    border-radius: 0.50rem;
+
+    &:hover {
+      background-color: $hover;
+  }
+ } 
 }
