--- a/components/DogImages/DogImages.module.scss
+++ b/components/DogImages/DogImages.module.scss
@@ -1,5 +1,49 @@
 @import 'variables.scss';
 
+.resultContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start; /* Align input section to top */
+  flex-wrap: wrap; /* Allow sections to wrap if needed */
+  gap: 2rem; /* Add some spacing between sections */
+}
+
+.resultSection {
+  flex: 1; /* Take up available space */
+  background-color: $color3;
+  padding: 2rem;
+  border-radius: 0.8rem;
+  margin-right: 5rem;
+}
+
+.inputSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 2rem;
+
+  input {
+    padding: 0.8rem;
+    margin-bottom: 0.5rem;
+    background-color: $color3;
+    border: 1px solid $color1;
+    padding: 0.5rem;
+    border-radius: 0.50rem;
+  }
+
+  button {
+    background-color: $color1;
+    padding: 0.5rem 1rem;
+    border-radius: 0.50rem;
+    margin-bottom: 3rem;
+
+    &:hover {
+      background-color: $hover;
+    }
+  }
+}
+
 .flexContainer {
   display: flex;
   justify-content: space-between;
