--- a/components/Highscore/Highscore.module.scss
+++ b/components/Highscore/Highscore.module.scss
@@ -24,7 +24,7 @@
 
     th {
       background-color: $color2;
-      color: #fff;
+      color: $white;
       font-weight: bold;
     }
 
@@ -33,11 +33,3 @@
     }
   }
 }
-
-// .highscoreBox {
-//   background-color: $color3;
-// }
-
-// .centeredCell {
-//   text-align: center;
-// }
