--- a/components/DogForm/DogForm.module.scss
+++ b/components/DogForm/DogForm.module.scss
@@ -3,6 +3,7 @@
 .dogForm {
   max-width: 30rem;
   padding: 2rem;
+  margin-top: 2rem;
   background-color: #e4edfd;
   border-radius: 0.8rem;
 
@@ -10,6 +11,23 @@
   textarea {
     display: block;
     margin: 0.5rem 0 3rem 0;
+    background-color: $color3;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: 1px solid $color1;
+
+
+    &:-webkit-autofill {
+      color: $black;
+      background-color: transparent;
+      border: none;
+    }
+
+    &:not(:-webkit-autofill):not(:placeholder-shown) {
+      color: $black;
+      background-color: transparent;
+      border: none;
+    }
   }
 
   button {
