--- a/pages/add-dog/add-dog.module.scss
+++ b/pages/add-dog/add-dog.module.scss
@@ -1,8 +1,8 @@
 .temporaryLayout {
-  margin: 2rem 3rem;
+  margin: 2rem;
 
   button {
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
 
     &:hover {
       text-decoration: underline;
